hetz/paperless/paperless-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ingress
  namespace: paperless
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/12
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - docs.spacemule.net
    secretName: paperless-tls-secret
  rules:
  - host: docs.spacemule.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paperless-service
            port:
              number: 8081
